Set one of fixing java 8 deprecation issues with numbers.