@@ -114,6 +114,6 @@ public class ScreeningFunction
 					+ " is not a number '" + tv.getStringValue() + "'");
 			}
 		}
-		inStack.push(new Double(retFlags));
+		inStack.push(Double.valueOf(retFlags));
 	}
 }
